--- a/groceries.bib
+++ b/groceries.bib
@@ -323,6 +323,24 @@
   file = {/Users/gregmacfarlane/Zotero/storage/Q4SN2FKH/Delbosc and Currie - 2011 - The spatial context of transport disadvantage, soc.pdf;/Users/gregmacfarlane/Zotero/storage/IZUB756Q/S0966692311000469.html}
 }
 
+@article{dhurandhar2021,
+  title = {Key {{Causes}} and {{Contributors}} of {{Obesity}}: {{A Perspective}}},
+  shorttitle = {Key {{Causes}} and {{Contributors}} of {{Obesity}}},
+  author = {Dhurandhar, Nikhil V. and Petersen, Kristina S. and Webster, Chelsi},
+  year = {2021},
+  month = dec,
+  journal = {Nursing Clinics of North America},
+  series = {Obesity},
+  volume = {56},
+  number = {4},
+  pages = {449--464},
+  issn = {0029-6465},
+  doi = {10.1016/j.cnur.2021.07.007},
+  urldate = {2023-09-11},
+  keywords = {Clinical management,Epidemiology,Etiology,Prevention,Risk factors},
+  file = {/Users/gregmacfarlane/Zotero/storage/8ZCQBN8Y/S0029646521000700.html}
+}
+
 @article{dong2006,
   title = {Moving from Trip-Based to Activity-Based Measures of Accessibility},
   author = {Dong, Xiaojing and {Ben-Akiva}, Moshe E. and Bowman, John L. and Walker, Joan L.},
